Fix horizontal page overflow bug on safari

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,7 @@ $bottomHeaderHeight-mobile: 3.3rem;
 
 #page-container {
   max-width: 1920px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
